# CS426-FinalProject-Backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Justfile  README.md  docker-compose.yml  pyproject.toml
app/: asgi.py
app/config/: __init__.py  app.py  base.py
app/database/: __init__.py  adapters.py
app/database/queries/: __init__.py  __init__.pyi
app/domain/accounts/: dependencies.py  guards.py  models.py  repositories.py  schemas.py  urls.py
app/domain/chat/: dependencies.py  models.py  repositories.py  schema.py  urls.py
app/domain/gateway/: controller.py
app/domain/quizzes/: dependencies.py  models.py  repositories.py  schemas.py  urls.py
app/domain/tasks/: dependencies.py  models.py  repositories.py  schemas.py  urls.py
app/lib/: crypt.py  utils.py
app/server/: plugins.py  routers.py
docs/: GATEWAY.md
migrations/: 20250901054949_initial_schema.up.sql  20250901082126_oauth2.down.sql  20250901082126_oauth2.up.sql  20250902054855_jwt_token_denylist.down.sql  20250902054855_jwt_token_denylist.up.sql  20250908121218_chat.down.sql  20250908121218_chat.up.sql  20250908125157_chat_member_approval.down.sql  20250908125157_chat_member_approval.up.sql  20250910045356_quiz.down.sql  20250910045356_quiz.up.sql  20250910171924_quiz_fkey_cascade.down.sql  20250910171924_quiz_fkey_cascade.up.sql  20250910173647_drop_triggers.down.sql  20250910173647_drop_triggers.up.sql  20250911042754_tasks.down.sql  20250911042754_tasks.up.sql  20250911091428_message_search_index.down.sql  20250911091428_message_search_index.up.sql
(+29 files in other folders)
